tests-e2e/tests/package_manager/snapshots/package_manager__cli__root_checking_log.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [unknown_flag] · command line:1:6
  •
  │
  • unexpected argument '--checking-log' found
  │
  │ Usage: iris [--log-file] <SUBCOMMAND>
  │
  │ For more information, try '--help'.
  │
  │   iris --checking-log off lsp
  │        ╰─────────────
  •
